--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,7 @@ a,a:visited, a:link{
     margin-top: 12rem;
   }
   
-  .grid-container > ul {
+.grid-container > ul {
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
     padding: 10rem 0;
@@ -64,3 +64,7 @@ a,a:visited, a:link{
   grid-column-start: 1;
   grid-column-end: 2;
 }  
+
+.sdg {
+    display: none;
+}
